codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_mantle_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
assertion_line: 49
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort

↑
  6. Local — open-weights — DeepSeek-R1 32B (local)                   Distilled reasoning model,
                                                                      128K context, strong on chain-
                                                                      of-thought tasks. Local
                                                                      inference via Ollama.
  7. Local — open-weights — Llama 3.1 70B (local)                     128K context, generalist
                                                                      baseline. Local inference;
                                                                      weaker at agent-loop coding
                                                                      than qwen3-coder, included as
                                                                      a control.
  8. Cloud — router (catchall) — OpenRouter — auto (best-of router)   OpenRouter's auto-router:
                                                                      sends each request to
                                                                      whichever frontier model wins
                                                                      for the prompt. NOT a fixed
                                                                      model — context window is
                                                                      variable per-routed request.
                                                                      Conservative 200K default
                                                                      avoids over-stuffing when it
                                                                      routes to a smaller-window
                                                                      model.
  9. Cloud — router (catchall) — Claude Opus 4.7 (Anthropic via Open… Anthropic frontier Opus tier —
                                                                      strongest reasoning + agent
                                                                      calibration. 1M context. Reach
                                                                      Opus via OpenRouter without
                                                                      separate Anthropic API key/
                                                                      billing.
  10. Cloud — router (catchall) — GPT-5.2 Codex (OpenAI via OpenRout… OpenAI codex-tuned tier —
                                                                      purpose-built for coding
                                                                      agents, 400K context. Reach
                                                                      GPT-5 family without OpenAI
                                                                      direct provider setup.
  11. Cloud — router (catchall) — Grok Code Fast 1 (xAI via OpenRout… xAI fast coding tier — high
                                                                      throughput, 256K context,
                                                                      competitive on tool-use. The
                                                                      cheap-and-fast option when
                                                                      latency dominates quality.
  12. Cloud — router (catchall) — Gemini 2.5 Pro (Google via OpenRou… Google flagship general model,
                                                                      1M context. Strong on long-
                                                                      document analysis. Reach
                                                                      Gemini without separate Google
                                                                      Cloud setup.
› 13. GPT-6.1 Sol (current)                                           Latest workhorse model for
                                                                      coding and everyday work.
↓
  enter select · esc back
