codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__catalog_model_session_header_startup.snap
---
source: tui/src/chatwidget/tests/app_server.rs
assertion_line: 100
expression: rendered
---
ecodex (v<VERSION>) · turtles all the way down
model: GPT-5.6 Luna high
directory: /tmp/thread-settings

  To get started, describe a task or try one of these commands:

  /init - create an AGENTS.md file with instructions for Codex
  /status - show current session configuration
  /permissions - choose what Codex is allowed to do
  /model - choose what model and reasoning effort to use
  /review - review any changes and find issues
