codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__hook_blocked_failed_feedback_history_snapshot.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 5083
expression: rendered
---
• Blocked by hook · PreToolUse
  └ run tests before touching the fixture

• Hook failed · PostToolUse
  └ hook exited with code 7
