codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3551
expression: "render_bottom_popup(&chat, 80)"
---
  Select Model and Effort

↑
  13. GPT-6.1-Sol (default)                             Latest workhorse model
                                                        for coding and everyday
                                                        work.
  14. GPT-6-Astra                                       Frontier intelligence
                                                        for the most demanding
                                                        work.
  15. GPT-6-Sol                                         Previous generation
                                                        workhorse model.
  16. GPT-6-Luna                                        Fast and affordable
                                                        model for easier tasks.
  17. GPT-5.6-Sol                                       Older generation
                                                        workhorse model.
  18. GPT-5.6-Terra                                     Older balanced model for
                                                        straightforward work.
  19. GPT-5.6-Luna                                      Older fast and efficient
                                                        model.
› 20. GPT-5.5 (current)                                 Legacy coding model.

  enter select · esc back
